feat: make GTM config obselete
