# apps/api/src/lib/serializers.ts
@@ -35,8 +35,7 @@ export function toSite(site: Site): SiteDto {
     desiredReplicas: site.desiredReplicas,
     minReplicas: site.minReplicas,
     maxReplicas: site.maxReplicas,
-    gtmAccountId: site.gtmAccountId,
-    gtmContainerId: site.gtmContainerId,
+    containerConfig: site.containerConfig,
     containerConfigSecretName: site.containerConfigSecretName,
     createdAt: site.createdAt.toISOString(),
     updatedAt: site.updatedAt.toISOString(),
